--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -62,6 +62,7 @@ footer .bottom-footer a{
 .nav-bar-1 div a:hover ,
 .nav-bar-1 div a:hover .icon ,
 .nav-bar-2 .nav-links .nav-item .nav-link:hover,
+.nav-bar-2 .nav-icons .icon:hover,
 footer .top-footer div a:hover ,
 footer .bottom-footer a:hover{
     color: var(--light-green);
@@ -116,6 +117,7 @@ footer .bottom-footer a:hover{
 .nav-bar-2 .nav-icons .icon{
     margin: 0 10px;
     font-size: 30px;
+    cursor: pointer;
 }
 .nav-bar-2 .nav-icons .cart , 
 .nav-bar-2 .nav-icons .user {
@@ -186,7 +188,7 @@ footer .bottom-footer a:hover{
 }
 .hero-home .slider-icon-bottom {
     position: absolute;
-    bottom: 55px;
+    bottom: 15px;
 }
 .hero-home .slider-icon-bottom .icon {
     font-size: 30px;
@@ -536,13 +538,19 @@ footer .middel-footer .btn:hover {
     border-top: 1px solid var(--border);
 }
 /* End Footer */
+@media (min-width:992px) {
+    .home-section-1 .home-categories:hover > div:not(:hover),
+    .home-section-2 .home-featureds:hover > .card:not(:hover){
+        transform: scale(0.95);
+        filter: blur(10px);
+}
+}
 @media (max-width:992px) {
     .container {
         padding: 0 80px;
     }
     .nav-bar-2 .nav-links{
         flex-direction: column;
-        align-items: flex-start;
     }
     .nav-bar-2 div:nth-child(1) {
         width: 100%;
@@ -551,7 +559,7 @@ footer .middel-footer .btn:hover {
         align-items: center;
     }
     .nav-bar-2 div .nav-btn {
-        display: block;
+        display: flex;
     }
     .nav-bar-2 .nav-links ,
     .nav-bar-2 .nav-icons {
@@ -560,25 +568,26 @@ footer .middel-footer .btn:hover {
         z-index: 2;
         padding: 10px 80px;
         width: 100%;
+        text-align: center;
         display: none;
     }
     .nav-bar-2 .nav-links {
         top: 80px;
     }
     .nav-bar-2 .nav-links .nav-item{
+        width: 100%;
         padding: 5px 10px;
         border-radius: 5px ;
         transition: all .6s ease-in-out;
     }
     .nav-bar-2 .nav-links .nav-item:hover{
         background-color: var(--light-green);
-        transform: translateX(15px);
     }
     .nav-bar-2 .nav-links .nav-item:hover .nav-link {
         color: var(--off-white) !important;
     }
     .nav-bar-2 .nav-icons {
-        justify-content: flex-start;
+        justify-content: center;
         top: 220px;
     }
     .hero-home , .hero-about {
