--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -208,13 +208,6 @@ footer .bottom-footer a:hover{
 section {
     padding: 40px 120px;
 }
-.animate-left {
-    transform: translateX(-100%);
-}
-.animate-left.show-animate {
-    transform: translateX(0);
-    
-}
 section .title-section {
     text-align: center;
 }
@@ -545,6 +538,7 @@ footer .middel-footer .btn:hover {
 /* Scroll To Top */
 .to-top {
     position: fixed;
+    display: flex;
     font-size: 20px;
     padding: 10px;
     color: var(--off-white);
